[package]
name = "lightbox_rs"
version = "0.1.0"
authors = ["RandomExplosion <benjaminjmcgaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.4"
chrono = "0.4"
log = "0.4.11"
pretty_env_logger = "0.4.0"
wifi-rs = "0.2.1"

