[package]
name = "lightbox_rs"
version = "0.1.0"
authors = ["RandomExplosion <benjaminjmcgaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.6.0"
chrono = "0.4"
log = "0.4.11"
pretty_env_logger = "0.4.0"
regex = "1.0"
rodio = "0.11.0"
rust_gpiozero = "0.2.0"
lazy_static = "1.4.0"
thiserror = "1.0.24"


